Modify VLC build script to pass building progress.